# graphwash

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature.yml  spike.yml
.github/workflows/: ci.yml  docker.yml  docs-site.yml  pr-label.yml  pr-status.yml
docs/: dev-guide.md  graphwash-diagrams.md  graphwash-prd.md  graphwash-setup-report.md  graphwash-task-list.md
docs/adr/: 0001-hgt-over-gat.md  0002-native-attention-explainer.md  0003-it-aml-medium-dataset.md  0004-vanilla-d3-over-react.md  0005-monolith-delivery-model.md  0006-hetzner-instance-choice.md  0007-hi-medium-over-li-medium.md  0008-composite-node-ids-and-at-bank-relation.md  README.md
docs/ops/: hetzner.md  monitoring.md
ops/: deploy-caddy.md  graphwash.Caddyfile
scripts/: build-pr-status.sh  check-commit-scope.sh  download_data.py  resolve-pr-number.sh  sync_labels.sh
scripts/fixtures/: pull_request.json  workflow_run_fork.json  workflow_run_same_repo.json
site/: build.mjs  index.html  manifest.json  metrics.json  package.json
site/scripts/: category.js  landing.js  manifest.js  reader.js  render.js  route.js  router.js
site/styles/: category.css  landing.css  reader.css  tokens.css
site/tests/: build-manifest.test.mjs  build-md.test.mjs  build-metrics.test.mjs  build-orchestration.test.mjs  render-runtime.test.mjs  router.test.mjs  url-helper.test.mjs
src/graphwash/: __init__.py
src/graphwash/api/: __init__.py  hgt_stub.py  main.py  models.py
src/graphwash/data/: __init__.py  loader.py  node_types.py  schema.py  splits.py
tests/: test_smoke.py
tests/api/: test_health.py  test_hgt_stub.py  test_score.py
tests/data/: conftest.py  test_fixture_shape.py  test_loader.py  test_loader_account_features.py  test_loader_account_index.py  test_loader_at_bank_edges.py  test_loader_bank_features.py  test_loader_bank_index.py  test_loader_build.py  test_loader_load.py  test_loader_self_loops.py  test_loader_surface.py  test_loader_timestamps.py  test_loader_wire_edges.py  test_node_types.py  test_schema_epoch.py  test_splits.py
tests/scripts/: test_download_data.py
