#:schema https://json.schemastore.org/any.json

[project]
name = "graphwash"
version = "0.1.0"
description = "Wire transfer AML detection via Heterogeneous GNNs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Dinesh Dawonauth" }]

dependencies = [
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.11.0",
    "torch-geometric>=2.7,<2.8",
    "torch-scatter>=2.1.2 ; sys_platform == 'linux'",
    "torch-sparse>=0.6.18 ; sys_platform == 'linux'",
    "torch-cluster>=1.6.3 ; sys_platform == 'linux'",
    "kaggle>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "pytest-randomly>=3.15",
    "pytest-timeout>=2.3",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphwash"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
torch         = [{ index = "pytorch", marker = "sys_platform == 'linux'" }]
torchvision   = [{ index = "pytorch", marker = "sys_platform == 'linux'" }]
torchaudio    = [{ index = "pytorch", marker = "sys_platform == 'linux'" }]
torch-scatter = { index = "pyg" }
torch-sparse  = { index = "pyg" }
torch-cluster = { index = "pyg" }

[[tool.uv.index]]
name     = "pytorch"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name     = "pyg"
url      = "https://data.pyg.org/whl/torch-2.8.0+cu128.html"
format   = "flat"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "D", "UP", "ANN", "ASYNC", "S", "B",
    "A", "C4", "DTZ", "EM", "FA", "ISC", "ICN", "LOG", "G", "PIE",
    "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH",
    "ARG", "PTH", "ERA", "PL", "TRY", "FLY", "PERF", "FURB", "RUF",
]
ignore = ["D203", "D212", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "D", "ANN", "PLR2004"]
"scripts/**/*" = ["T20", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true
plugins = []
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=src --cov-branch --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
